src/objects/YoutubeLinks__c.object
<CustomObject>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thumbnails_Image__c</fullName>
        <label>Thumbnails Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Video_sequence__c</fullName>
        <label>Video sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>YouTubeHeader__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>YouTube Header</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>YoutubeURL__c</fullName>
        <label>YoutubeURL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Reversity Video</label>
    <nameField>
        <displayFormat>YID-{0000}</displayFormat>
        <label>YID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reversity Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Reversity_Videos</fullName>
        <columns>NAME</columns>
        <columns>YouTubeHeader__c</columns>
        <columns>YoutubeURL__c</columns>
        <columns>IsActive__c</columns>
        <columns>Video_sequence__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Reversity Videos</label>
    </listViews>
</CustomObject>